--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
   <app-navbar></app-navbar>
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-
+    <div class="container">
+      
+    </div>
+  <app-footer></app-footer>
