--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
+.footer{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
 /* You can add global styles to this file, and also import other style files */
