--- a/src/app/components/clientes/clientes.component.html
+++ b/src/app/components/clientes/clientes.component.html
@@ -1,3 +1,6 @@
-<p>
-  clientes works!
-</p>
+<div class="card border-primary shadow-lg mb-5 bg-white rounded">
+  <div class="card-header bg-primary border-primary text-center text-white"></div>
+  <div class="card-body d-flex flex-column align-items-center text-jusitfy">
+    <p class="card-text"></p>
+  </div>
+</div>
