--- a/src/app/components/clientes/clientes.component.html
+++ b/src/app/components/clientes/clientes.component.html
@@ -1,6 +1,27 @@
 <div class="card border-primary shadow-lg mb-5 bg-white rounded">
   <div class="card-header bg-primary border-primary text-center text-white"></div>
   <div class="card-body d-flex flex-column align-items-center text-jusitfy">
-    <p class="card-text"></p>
+    
+    <table>
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>NOMBRE</th>
+          <th>APELLIDO</th>
+          <th>EMAIL</th>
+          <th>FECHA</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let cliente of clientes">
+          <td>{{cliente.id}}</td>
+          <td>{{cliente.nombre}}</td>
+          <td>{{cliente.apellido}}</td>
+          <td>{{cliente.email}}</td>
+          <td>{{cliente.createAt}}</td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 </div>
+
