--- a/src/app/components/clientes/clientes.component.html
+++ b/src/app/components/clientes/clientes.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="card-body d-flex flex-column align-items-center text-jusitfy">
       
-      <table class="table table-bordered table-striped table-responsive">
+      <table class="table table-bordered table-striped table-responsive-md">
         <thead class="thead-primary">
           <tr>
             <th scope="col">ID</th>
