--- a/src/app/components/clientes/clientes.component.html
+++ b/src/app/components/clientes/clientes.component.html
@@ -6,8 +6,10 @@
       </h1>
     </div>
     <div class="card-body d-flex flex-column align-items-center text-jusitfy">
-      
-      <table class="table table-bordered table-striped table-responsive-md">
+      <div *ngIf="clientes?.length == 0" class="alert alert-info w-100">
+        No hay registros en la BD
+      </div>
+      <table class="table table-bordered table-striped table-responsive-md" *ngIf="clientes?.length > 0">
         <thead class="thead-primary">
           <tr>
             <th scope="col">ID</th>
@@ -15,6 +17,8 @@
             <th scope="col">APELLIDO</th>
             <th scope="col">EMAIL</th>
             <th scope="col">FECHA</th>
+            <th scope="col">EDITAR</th>
+            <th scope="col">ELIMINAR</th>
           </tr>
         </thead>
         <tbody>
@@ -24,6 +28,12 @@
             <td>{{cliente.apellido}}</td>
             <td>{{cliente.email}}</td>
             <td>{{cliente.createAt}}</td>
+            <td> 
+              <button class="btn btn-primary btn-block" [routerLink]="['/Registrar-Cliente',cliente.id]">Editar</button>
+            </td>
+            <td> 
+              <button class="btn btn-danger btn-block" (click)="delete(cliente)">Eliminar</button>
+            </td>
           </tr>
         </tbody>
       </table>
